--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,16 +7,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     
-    
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/android_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:logo="@drawable/android_icon">
         <activity
             android:name="com.example.liveabetes.MainActivity"
             android:label="@string/app_name"
