--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,62 +17,57 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:logo="@drawable/android_icon">
         <activity
-            android:name="com.example.liveabetes.MainActivity"
-            android:label="@string/app_name"
+            android:name=".ProfileSetupActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.liveabetes.BloodGlucoseActivity"
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".ProfileSetupActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+        </activity>
+        <activity
+            android:name=".BloodGlucoseActivity"
             android:label="@string/title_activity_blood_glucose"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity
-            android:name="com.example.liveabetes.BloodPressureActivity"
+            android:name=".BloodPressureActivity"
             android:label="@string/title_activity_blood_pressure"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity
-            android:name="com.example.liveabetes.GraphActivity"
-            android:label="@string/title_activity_graph"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
-        </activity>
-        <activity
-            android:name="com.example.liveabetes.InsulinActivity"
+            android:name=".InsulinActivity"
             android:label="@string/title_activity_insulin"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity
-            android:name="com.example.liveabetes.WeightActivity"
+            android:name=".WeightActivity"
             android:label="@string/title_activity_weight"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity
-            android:name="com.example.liveabetes.SettingsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.liveabetes.MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
         </activity>
     </application>
 
