--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name="com.example.liveabetes.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +31,8 @@
         <activity
             android:name="com.example.liveabetes.BloodGlucoseActivity"
             android:label="@string/title_activity_blood_glucose"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
@@ -38,7 +40,8 @@
         <activity
             android:name="com.example.liveabetes.BloodPressureActivity"
             android:label="@string/title_activity_blood_pressure"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
@@ -46,7 +49,8 @@
         <activity
             android:name="com.example.liveabetes.GraphActivity"
             android:label="@string/title_activity_graph"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
@@ -54,7 +58,8 @@
         <activity
             android:name="com.example.liveabetes.InsulinActivity"
             android:label="@string/title_activity_insulin"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
@@ -62,7 +67,8 @@
         <activity
             android:name="com.example.liveabetes.WeightActivity"
             android:label="@string/title_activity_weight"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
@@ -70,7 +76,8 @@
         <activity
             android:name="com.example.liveabetes.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.example.liveabetes.MainActivity" >
+            android:parentActivityName="com.example.liveabetes.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.liveabetes.MainActivity" />
