--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme" android:logo="@drawable/android_icon">
         <activity
             android:name=".ProfileSetupActivity"
-            android:label="@string/title_activity_settings"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
 			android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
